update to html style

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,3 +6,10 @@
 h1{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+
+p{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 12px;
+    margin: 0;
+    padding: 0;
+}
